# pdt_module

./: .gitignore  CMakeLists.txt  README.md  package.xml
calib/05-02-dataset/: camera_left.yaml  camera_right.yaml  extrinsics.yaml
calib/07-10-dataset/: camera_left.yaml  camera_right.yaml  extrinsics.yaml
launch/: ground_estimation.launch  image_read.launch  image_test.launch  object_detector_node.launch  objects_detection_1.launch  stixel_world_1.launch  stixel_world_2.launch  stixels_estimation_node.launch  video_input_node.launch
msg/: StereoImage.msg  Stixel_msg.msg  Stixels_msg.msg
src/: AbstractGui.hpp  BasicSdlGui.cpp  BasicSdlGui.hpp  EmptyGui.cpp  EmptyGui.hpp
src/ground_estimation/: build_ground.cmake  ground_estimation.cpp  test.config.ini
src/image_read/: build_image_read.cmake  image_read.cpp
src/image_test/: build_image_test.cmake  print_image.cpp  read_from_camera.cpp
src/object_detector/: BasicSdlGui.cpp  BasicSdlGui.hpp  ObjectDetectorBasic.cpp  ObjectDetectorBasic.hpp  build_object_detector.cmake  object_detector_node.cpp  test_monocular_objects_detection_lib.config.ini
src/objects_detection/: build_objects_detection.cmake  cvpr2012_very_fast_over_bahnhof.config.ini  objects_detection.cpp
src/stixel_world/: build_stixel_world.cmake  fast.config.ini  fast_uv.config.ini  stixel_world.cpp
src/stixels_estimator/: StixelsEstimatorBasic.cpp  StixelsEstimatorBasic.hpp  build_stixels_estimator.cmake  stereo_calibration_dataset1.proto.txt  stixels_estimator_node.cpp  test_objects_detection_lib.config.ini
src/video_input/: VideoInputPrimitive.cpp  VideoInputPrimitive.hpp  VideoInputSynchronized.cpp  VideoInputSynchronized.hpp  VideoInputVeryPrimitive.cpp  VideoInputVeryPrimitive.hpp  build_video_input_node.cmake  video2.cpp  video_input_node.cpp
src/video_input/preprocessor/: AbstractPreprocessor.cpp  AbstractPreprocessor.hpp  EmptyPreprocessor.cpp  EmptyPreprocessor.hpp  MeiModelPreprocessor.cpp  MeiModelPreprocessor.hpp  ResamplePreprocessor.cpp  ResamplePreprocessor.hpp
src/video_input/preprocessor/camera_models/: utils.cpp  utils.h  utils_mei.cpp  utils_mei.h
srv/: FetchStereoImages.srv
