<?xml version="1.0"?>
<package>

  <name>pdt_module</name>
  <version>0.0.1</version>
  <description>
    The pdt_module package. Creates a ROS implementation of RodrigoBenenson pedestrian detection algorithm. 
  </description>

  <maintainer email="anoopvargheese@gmail.com">Anoop Vargheese</maintainer>
  <license>BSD</license>
  <url type="website"> https://github.com/RedMarbles/pdt_360deg_git </url>
  <author email="anoopvargheese@gmail.com">Anoop Vargheese</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>